--- a/04-backend-server/package.json
+++ b/04-backend-server/package.json
@@ -16,6 +16,7 @@
     "express": "^4.21.0",
     "express-fileupload": "^1.5.1",
     "express-validator": "^7.2.0",
+    "google-auth-library": "^9.14.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.2",
     "uuid": "^11.0.2"
